--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -49,6 +49,9 @@ Use it to make something cool, have fun, and share what you've learned with othe
  */
 
 
+@import url("sass/reports.css");
+
+
 /**
  * 1.0 Reset
  *
