--- a/wp-content/themes/twentyfourteen/sass/reports.scss
+++ b/wp-content/themes/twentyfourteen/sass/reports.scss
@@ -5,82 +5,190 @@ $text2: #ffffff;
 $lgrey: #bbbbbb;
 $dgrey: #777777;
 
-$space: 15px;
+$gutter: 15px;
+$spacer: 2rem;
+$padding: 10px;
 
 .single-sem-report, .single-social-report {
   text-align: center;
   color: $text;
 
   .report-component {
-    width: 50%;
+    width: 65%;
     min-width: 300px;
-    padding-right: -$space;
-    padding-left: -$space;
+    margin: $spacer auto;
+
+    &:hover {
+      .rc-content {
+//        max-height: 2500px;
+      }
+    }
 
     .rc-title {
-      margin: 0 $space $space;
-      padding: 5px;
+      padding: $padding;
       background-color: $accent;
       color: $text2;
     }
 
+    .rc-full {
+      margin-bottom: $spacer;
+    }
+
     .rc-content {
       border-bottom: 1px solid $lgrey;
-      margin-bottom: $space;
+      margin-bottom: calc(2 * #{$spacer});
+      overflow: hidden;
+//      max-height: 0px;
+      transition: max-height 2s;
+      -moz-transition: max-height 2s; /* Firefox 4 */
+      -webkit-transition: max-height 2s; /* Safari and Chrome */
+      -o-transition: max-height 2s; /* Opera */
 
       .rc-col {
         width: 50%;
         float: left;
         box-sizing: border-box;
-        border-right: 1px solid $lgrey;
-        padding-right: $space;
-        padding-left: $space;
+        margin-bottom: $spacer;
 
-        &.clearfix {
-          border: none;
+        &.rc-col-one {
+          padding-right: $gutter;
+        }
+
+        &.rc-col-two {
+          padding-left: $gutter;
+          border-left: 1px solid $lgrey;
+        }
+
+        @media (max-width: 60em) {
+          width: 100%;
+
+          &.rc-col-one, &.rc-col-two {
+            padding: 0;
+            border: none;
+          }
         }
       }
 
       .rc-subtitle {
         font-weight: normal;
+        margin: 0 0 $spacer;
+        padding: 0;
       }
 
       .rc-heading {
         background-color: $accent2;
         color: $text2;
-        padding: 5px;
+        padding: $padding;
+        margin: 0 0 $gutter;
       }
 
       .rc-data {
         background-color: $dgrey;
         color: #text;
-        padding: 5px;
+        padding: $padding;
+        margin: 0 0 $spacer;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
       }
 
       .rc-table {
         border: none;
         border-collapse: separate;
-        border-spacing: 5px;
+        border-spacing: $gutter;
         padding: 0;
-        margin: $space;
+        margin: -$gutter;
+        width:101%;
+        width: -webkit-calc(#{$gutter} * 2 + 100%);
+        width: -moz-calc(#{$gutter} * 2 + 100%);
+        width: calc(#{$gutter} * 2 + 100%);
+
+        td, th {
+          padding: $padding;
+          text-align: center;
+          border: none;
+          vertical-align: middle;
+        }
 
         .rc-table-head {
-          padding: 5px;
           background-color: $accent2;
           color: $text2;
         }
 
         .rc-table-dark {
-          padding: 5px;
           background-color: $dgrey;
           color: $text;
         }
 
         .rc-table-light {
-          padding: 5px;
           background-color: $lgrey;
           color: $text;
+
+          span {
+            display: none;
+          }
         }
+
+        @media (max-width: 60em) {
+          &#tbl-facebook-top-ten-posts {
+            border-spacing: 0;
+            width: 100%;
+            margin: 0;
+
+            thead {
+              display: none;
+            }
+
+            tr {
+              position: relative;
+              display: block;
+              margin-bottom: $spacer;
+              border-top: 1px solid $lgrey;
+              padding-top: $spacer;
+
+              &:after {
+                content: "";
+                display: table;
+                clear: both;
+              }
+
+              &:last-child {
+                margin-bottom: 0;
+              }
+            }
+
+            .rc-table-dark {
+              display: block;
+              padding: $padding;
+            }
+
+            .rc-table-light {
+              display: block;
+              float: left;
+              margin-top: $gutter;
+              width: 33.33333%;
+              box-sizing: border-box;
+
+              span {
+                display: block;
+                font-weight: bold;
+                background-color: $accent2;
+                color: $text2;
+                margin: -$padding;
+                margin-bottom: $padding;
+                padding: $padding;
+              }
+            }
+          }
+        }
+      }
+
+      hr {
+        border: 0;
+        height: 1px;
+        background-color: $lgrey;
+        width: 100%;
       }
     }
   }
