--- a/wp-content/themes/twentyfourteen/sass/reports.scss
+++ b/wp-content/themes/twentyfourteen/sass/reports.scss
@@ -54,11 +54,18 @@ $break: 60em;
 
         &.rc-col-one {
           padding-right: $gutter;
+
+          &.rc-col-border {
+            border-right: 1px solid $lgrey;
+          }
         }
 
         &.rc-col-two {
           padding-left: $gutter;
-          border-left: 1px solid $lgrey;
+
+          &.rc-col-border {
+            border-left: 1px solid $lgrey;
+          }
         }
 
         @media (max-width: $break) {
@@ -105,151 +112,7 @@ $break: 60em;
       }
 
       .rc-piegraph {
-        position: relative;
-
-        .rc-pie {
-          position: absolute;
-          width: 100px;
-          height: 200px;
-          overflow: hidden;
-          left: 150px;
-          -moz-transform-origin: left center;
-          -ms-transform-origin: left center;
-          -o-transform-origin: left center;
-          -webkit-transform-origin: left center;
-          transform-origin: left center;
-
-          /*
-            this is the actual visible part of the pie.
-            Give it the same dimensions as the regular piece.
-            Use border radius make it a half circle.
-            move transform origin to the middle of the right side.
-            Push it out to the left of the containing box.
-          */
-          &:before {
-            content: "";
-            position: absolute;
-            width: 100px;
-            height: 200px;
-            left: -100px;
-            border-radius: 100px 0 0 100px;
-            -moz-transform-origin: right center;
-            -ms-transform-origin: right center;
-            -o-transform-origin: right center;
-            -webkit-transform-origin: right center;
-            transform-origin: right center;
-
-          }
-
-          /*
-            add colour to each piece.
-          */
-          &:nth-of-type(1):before,
-          &:nth-of-type(1):after {
-            background-color:blue;
-          }
-          &:nth-of-type(2):after,
-          &:nth-of-type(2):before {
-            background-color:green;
-          }
-          &:nth-of-type(3):after,
-          &:nth-of-type(3):before {
-            background-color:red;
-          }
-          &:nth-of-type(4):after,
-          &:nth-of-type(4):before {
-            background-color:orange;
-          }
-          /*
-            unless the piece represents more than 50% of the whole chart.
-            then make it a square, and ensure the transform origin is
-            back in the center.
-
-            NOTE: since this is only ever a single piece, you could
-            move this to a piece specific rule and remove the extra class
-          */
-          &.rc-pie-big {
-            width: 200px;
-            height: 200px;
-            left: 50px;
-            -moz-transform-origin: center center;
-            -ms-transform-origin: center center;
-            -o-transform-origin: center center;
-            -webkit-transform-origin: center center;
-            transform-origin: center center;
-
-            /* if it's part of a big piece, bring it back into the square */
-            &:before {
-              left: 0px;
-            }
-            /*
-              big pieces will also need a second semicircle, pointed in the
-              opposite direction to hide the first part behind.
-            */
-            &:after {
-              content: "";
-              position: absolute;
-              width: 100px;
-              height: 200px;
-              left: 100px;
-              border-radius: 0 100px 100px 0;
-            }
-          }
-        }
-
-
-//        /*
-//          now rotate each piece based on their cumulative starting
-//          position
-//        */
-//        .pie[data-start="30"] {
-//          -moz-transform: rotate(30deg); /* Firefox */
-//          -ms-transform: rotate(30deg); /* IE */
-//          -webkit-transform: rotate(30deg); /* Safari and Chrome */
-//          -o-transform: rotate(30deg); /* Opera */
-//          transform:rotate(30deg);
-//        }
-//        .pie[data-start="60"] {
-//          -moz-transform: rotate(60deg); /* Firefox */
-//          -ms-transform: rotate(60deg); /* IE */
-//          -webkit-transform: rotate(60deg); /* Safari and Chrome */
-//          -o-transform: rotate(60deg); /* Opera */
-//          transform:rotate(60deg);
-//        }
-//        .pie[data-start="100"] {
-//          -moz-transform: rotate(100deg); /* Firefox */
-//          -ms-transform: rotate(100deg); /* IE */
-//          -webkit-transform: rotate(100deg); /* Safari and Chrome */
-//          -o-transform: rotate(100deg); /* Opera */
-//          transform:rotate(100deg);
-//        }
-//        /*
-//          and rotate the amount of the pie that's showing.
-//
-//          NOTE: add an extra degree to all but the final piece,
-//          to fill in unsightly gaps.
-//        */
-//        .pie[data-value="30"]:BEFORE {
-//          -moz-transform: rotate(31deg); /* Firefox */
-//          -ms-transform: rotate(31deg); /* IE */
-//          -webkit-transform: rotate(31deg); /* Safari and Chrome */
-//          -o-transform: rotate(31deg); /* Opera */
-//          transform:rotate(31deg);
-//        }
-//        .pie[data-value="40"]:BEFORE {
-//          -moz-transform: rotate(41deg); /* Firefox */
-//          -ms-transform: rotate(41deg); /* IE */
-//          -webkit-transform: rotate(41deg); /* Safari and Chrome */
-//          -o-transform: rotate(41deg); /* Opera */
-//          transform:rotate(41deg);
-//        }
-//        .pie[data-value="260"]:BEFORE {
-//          -moz-transform: rotate(260deg); /* Firefox */
-//          -ms-transform: rotate(260deg); /* IE */
-//          -webkit-transform: rotate(260deg); /* Safari and Chrome */
-//          -o-transform: rotate(260deg); /* Opera */
-//          transform:rotate(260deg);
-//        }
+        margin-top: $spacer;
       }
 
       .rc-table {
